--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -4,7 +4,8 @@ https://travis-ci.org/restorecommerce/access-control-srv?branch=master[image:htt
 https://david-dm.org/restorecommerce/access-control-srv[image:https://img.shields.io/david/restorecommerce/access-control-srv.svg?style=flat-square[Dependencies]]
 https://coveralls.io/github/restorecommerce/access-control-srv?branch=master[image:http://img.shields.io/coveralls/restorecommerce/access-control-srv/master.svg?style=flat-square[Coverage Status]]
 
-A microservice for access control.
+A microservice for access control part of
+the link:https://github.com/restorecommerce[Restorecommerce].
 
 [#features]
 == Features
