--- a/README.adoc
+++ b/README.adoc
@@ -4,10 +4,11 @@ https://travis-ci.org/restorecommerce/access-control-srv?branch=master[image:htt
 https://david-dm.org/restorecommerce/access-control-srv[image:https://img.shields.io/david/restorecommerce/access-control-srv.svg?style=flat-square[Dependencies]]
 https://coveralls.io/github/restorecommerce/access-control-srv?branch=master[image:http://img.shields.io/coveralls/restorecommerce/access-control-srv/master.svg?style=flat-square[Coverage Status]]
 
-A microservice for access control part of
-the link:https://github.com/restorecommerce[Restorecommerce].
+A microservice for access control.
 
 Please consult the documentation for using it:
 
 - *link:https://docs.restorecommerce.io/access-control-srv/index.html[Usage]*
 - *link:https://docs.restorecommerce.io/architecture/index.html[General Architecture]*
+
+Part of link:https://github.com/restorecommerce[Restorecommerce].
